# ag-ui

./: .gitignore  .golangci.yml  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  CONCURRENCY_FIX_SUMMARY.md  GOROUTINE_LEAK_FIX_SUMMARY.md  MEMORY_LEAK_FIX_SUMMARY.md  README.md  TEST_INTERFERENCE_DEBUGGING.md  VALIDATION_FIXES.md  dynamic-memory-monitoring-summary.md  error_handling_summary.md  goroutine-leak-debugger.sh  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  quick-interference-test.sh  render.yaml  setup-beads.sh  sync-map-optimization-summary.md  task-1-complete-message-types.md  task-2-enhance-event-validation.md  task-3-state-management-integration.md  test-interference-isolator.sh  turbo.json  websocket-event-processing-fix-summary.md  websocket-handler-fix-summary.md
.beads/: issues.jsonl  last-touched
.claude/: ralph-loop.local.md
.github/: CODEOWNERS  config-allowlist.txt  dependabot.yml  zizmor.yml
docs/: docs.json  integrations.mdx  introduction.mdx  pre-commit-setup.md
go-cli/: README.md  go.mod  go.sum
go-sdk/: .gitignore  .golangci.yml  BOUNDED_MAPS_IMPLEMENTATION.md  COMPREHENSIVE_TEST_REPORT.md  CONFIGURABLE_TIMEOUTS.md  CONTEXT_CANCELLATION_FIXES.md  CONTRIBUTING.md  CREDENTIAL_SECURITY_FIXES.md  DEVELOPMENT.md  FINAL_TEST_RESOLUTION.md  FIX_SUMMARY.md  MEMORY_MANAGEMENT_IMPROVEMENTS.md  MIGRATION_GUIDE.md  MIGRATION_TOOLS_SUMMARY.md  Makefile  NIL_CHECKS_SUMMARY.md  PANIC_RECOVERY_CHANGES.md  PERFORMANCE_DEBUGGING_GUIDE.md  RACE_CONDITION_FIXES.md  README.md  RECURSION_DEPTH_LIMITS_IMPLEMENTATION.md  SECURITY_FIXES_SUMMARY.md  SECURITY_HARDENING.md  STANDARDIZED_ERROR_HANDLING.md  TESTING_GUIDE.md  TEST_FIXES_SUMMARY.md  TEST_RELIABILITY_IMPROVEMENTS.md  TEST_RELIABILITY_REPORT.md  WEBSOCKET_TEST_OPTIMIZATIONS.md  ag-ui-cli  build_test.go  common.test  compile_test.go  configuration-improvements-summary.md  coverage_comprehensive.out  coverage_report.html  coverage_simple.out  coverage_test.out  final_coverage.out  find_large_tests.sh  (+6 more)
integrations/adk-middleware/python/: CHANGELOG.md  CONFIGURATION.md  README.md  USAGE.md  pyproject.toml
integrations/adk-middleware/python/examples/: pyproject.toml
integrations/adk-middleware/python/examples/server/: __init__.py
integrations/adk-middleware/python/examples/server/api/: __init__.py  agentic_generative_ui.py  backend_tool_rendering.py  predictive_state_updates.py
integrations/adk-middleware/python/src/ag_ui_adk/: __init__.py  adk_agent.py  agui_toolset.py  client_proxy_tool.py  client_proxy_toolset.py  config.py  endpoint.py  event_translator.py  session_manager.py
integrations/adk-middleware/python/src/ag_ui_adk/utils/: converters.py
integrations/adk-middleware/python/tests/: test_adk_130_invocation_id_override.py  test_adk_2_0_compat.py  test_adk_agent.py  test_agui_toolset_concurrency.py  test_client_proxy_tool.py  test_concurrent_limits.py  test_context_handling.py  test_context_integration.py  test_duplicate_function_response.py  test_endpoint.py  test_endpoint_error_handling.py  test_event_translator_comprehensive.py  test_from_app_integration.py  test_hitl_resumption_text_output.py  test_integration_mixed_partials.py  test_issue_437_skip_summarization_integration.py  test_lro_filtering.py  test_lro_sse_id_remap.py  test_lro_sse_persistence.py  test_lro_tool_response_persistence.py  test_message_history.py  test_multi_instance_hitl.py  test_multi_turn_conversation.py  test_multimodal_e2e.py  test_output_schema_suppression.py  test_pending_tool_calls_gating.py  test_predictive_state.py  test_resumability_config.py  test_sequential_agent_hitl_resumption.py  test_session_memory.py  test_stale_session_invocation_id.py  test_temp_state_extraction.py  test_thought_to_thinking_integration.py  test_tool_error_handling.py  test_tool_result_flow.py  test_tool_tracking_hitl.py  test_utils_converters.py
integrations/agent-spec/python/: pyproject.toml
integrations/agent-spec/python/ag_ui_agentspec/: agentspec_tracing_exporter.py
integrations/agent-spec/python/tests/: test_tracing_exporter.py
integrations/aws-strands/python/: pyproject.toml
integrations/aws-strands/python/examples/: pyproject.toml
integrations/aws-strands/python/examples/server/: __init__.py  model_factory.py
integrations/aws-strands/python/examples/server/api/: __init__.py  agentic_chat.py  agentic_generative_ui.py
integrations/aws-strands/python/src/ag_ui_strands/: __init__.py  agent.py  config.py
integrations/aws-strands/python/tests/: test_context_forwarding.py  test_multimodal_conversion.py  test_session_manager.py  test_template_agent_propagation.py
integrations/claude-agent-sdk/python/: README.md  pyproject.toml
integrations/claude-agent-sdk/python/ag_ui_claude_sdk/: __init__.py  adapter.py  handlers.py  session.py  utils.py
integrations/claude-agent-sdk/python/examples/: README.md
integrations/claude-agent-sdk/python/tests/: conftest.py  test_adapter.py  test_concurrency_integration.py  test_handlers.py  test_serialize_and_robustness.py  test_utils.py
integrations/langgraph/python/: pyproject.toml
integrations/langgraph/python/ag_ui_langgraph/: __init__.py  a2ui_tool.py  agent.py  endpoint.py  types.py  utils.py
integrations/langgraph/python/examples/: pyproject.toml
integrations/langgraph/python/examples/agents/: dojo.py
integrations/langgraph/python/examples/agents/a2ui_dynamic_schema/: agent.py
integrations/langgraph/python/examples/agents/agentic_chat/: agent.py
integrations/langgraph/python/examples/agents/human_in_the_loop/: agent.py
integrations/langgraph/python/tests/: _helpers.py  test_clone.py  test_cr_defensive_fallbacks.py  test_emit_events.py  test_get_schema_keys.py  test_interrupt_handling.py  test_make_json_safe.py  test_message_conversion.py  test_multimodal.py  test_nested_tool_end_dedup.py  test_orphan_tool_message_merge.py  test_predict_state_e2e.py  test_prepare_stream_interrupt_resume.py  test_reasoning_content.py  test_state_merging.py
integrations/langroid/python/: pyproject.toml
integrations/langroid/python/tests/: test_agent.py
(+2495 files in other folders)
