[project]
name = "ag_ui_adk"
description = "ADK Middleware for AG-UI Protocol"
version = "0.6.2"
readme = "README.md"
authors = [
    { name = "Mark Fogle", email = "mark@contextable.com" }
]
requires-python = ">=3.10, <3.15"
dependencies = [
    "ag-ui-protocol>=0.1.15",
    "aiohttp>=3.12.0",
    "asyncio>=3.4.3",
    "fastapi>=0.115.2",
    "google-adk>=1.16.0,<2.0.0",
    "pydantic>=2.11.7",
    # Primary SSE response implementation. Used unconditionally so the FastAPI
    # floor stays at >=0.115.2 (rather than the >=0.135.0 jump that would be
    # required to use fastapi.sse.EventSourceResponse). sse-starlette's
    # EventSourceResponse is self-contained -- it ships its own 15 s keep-alive
    # ping plus Cache-Control: no-cache / X-Accel-Buffering: no headers when
    # constructed directly, which lets the endpoint dynamically branch on the
    # request's Accept header (fastapi.sse is a marker class that only applies
    # SSE encoding via response_class= on generator path operations).
    "sse-starlette>=2.1.0",
    "uvicorn>=0.35.0",
]
license = "MIT"

[tool.ag-ui.scripts]
test = "python -m pytest"

[build-system]
requires = ["uv_build>=0.8.0,<0.11"]
build-backend = "uv_build"

[project.urls]
Homepage = "https://github.com/ag-ui-protocol/ag-ui/tree/main/integrations/adk-middleware/python"
Issues = "https://github.com/ag-ui-protocol/ag-ui/issues"


[dependency-groups]
dev = [
    "black>=26.3.1",
    "flake8>=7.3.0",
    "isort>=6.0.1",
    "mypy>=1.16.1",
    "pluggy>=1.6.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
    "pytest-xdist>=3.8.0",
]
