[project]
name = "ag-ui-agent-spec"
version = "0.1.0"
description = "AG-UI FastAPI adapter for Agent-Spec (LangGraph/Wayflow)"
license = "MIT"
readme = "README.md"
requires-python = ">=3.10,<3.14.0"
dependencies = [
  "fastapi>=0.115.0",
  "ag-ui-protocol>=0.1.10",
  "pyagentspec",
  "json-repair>=0.30.0,<0.45.0",
]
authors = [{ name = "Agent Spec team" }]

[tool.ag-ui.scripts]
test = "python -c \"print('Warning: no tests configured for ag-ui-agent-spec')\""

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ag_ui_agentspec"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
wayflowcore = { git = "https://github.com/oracle/wayflow.git ", rev = "main", subdirectory = "wayflowcore" }
pyagentspec = { git = "https://github.com/oracle/agent-spec.git ", rev = "main", subdirectory = "pyagentspec" }

[project.optional-dependencies]
langgraph = ["pyagentspec[langgraph]"]
wayflow = ["wayflowcore"]

[tool.uv]
package = true
