[project]
name = "ag-ui-claude-sdk"
version = "0.1.1"
description = "AG-UI integration for Anthropic Claude Agent SDK"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Ambient Code Platform" }
]
dependencies = [
  "ag-ui-protocol>=0.1.0",
  "claude-agent-sdk>=0.1.12",
  "anthropic>=0.68.0",
  "fastapi>=0.100.0",
  "uvicorn[standard]>=0.23.0",
  "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-asyncio>=0.21.0",
  "httpx>=0.24.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

