[project]
name = "ag-ui-langgraph"
version = "0.0.40"
description = "Implementation of the AG-UI protocol for LangGraph."
authors = [
    { name = "Ran Shem Tov", email = "ran@copilotkit.ai" }
]
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "ag-ui-protocol>=0.1.15",
    "ag-ui-a2ui-toolkit>=0.0.2",
    "langchain>=1.2.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.3.25,<2",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
fastapi = ["fastapi>=0.115.12"]

# Dev-only: resolve the sibling A2UI toolkit from local source so monorepo
# changes (e.g. the OSS-162 recovery loop) are picked up without publishing.
# uv strips [tool.uv.sources] from the built wheel, so the published package
# still depends on `ag-ui-a2ui-toolkit>=0.0.1a0` from PyPI.
[tool.uv.sources]
ag-ui-a2ui-toolkit = { path = "../../../sdks/python/a2ui_toolkit", editable = true }

[tool.ag-ui.scripts]
test = "python -m unittest discover tests"

[dependency-groups]
dev = [
    "fastapi>=0.115.12",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ag_ui_langgraph"]
exclude = [
    "examples/**",
]
