[project]
name = "ag_ui_langroid"
version = "0.1.0"
authors = [
    { name = "AG-UI Contributors" }
]
requires-python = ">=3.10, <3.14"
dependencies = [
    "ag-ui-protocol>=0.1.10",
    "fastapi>=0.115.12",
    "langroid>=0.1.0",
]

[tool.ag-ui.scripts]
test = "python -m unittest discover tests"

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.0",
]

