[project]
name = "langgraph-agui-dojo"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
    { name = "Ran Shem Tov" }
]
requires-python = ">=3.11,<3.14"
dependencies = [
    "copilotkit==0.1.86",
    "uvicorn>=0.34.0",
    "dotenv>=0.9.9",
    "langchain>=1.0.3",
    "langchain-anthropic>=1.0.1",
    "langchain-core>=1.0.2",
    "langchain-community>=0.0.36",
    "langchain-google-genai>=2.1.12",
    "langchain-openai>=1.0.1",
    "langgraph>=1.1.3,<2",
    # Pin: 0.7.97 requires DATABASE_URI at import time, breaking in-memory dev server
    "langgraph-api>=0.7.70,<0.7.97",
    "ag-ui-langgraph",
    "ag-ui-protocol",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.12",
]

[tool.uv]
override-dependencies = ["langgraph>=1.1.3,<2"]

[tool.uv.sources]
ag-ui-langgraph = { path = "../" }
ag-ui-protocol = { path = "../../../../sdks/python" }

[project.scripts]
dev = "agents.dojo:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents"]
